[package]
name = "watchman"
version = "1.2.0"
description = "Utility for keeping processes running. Built for ssh tunnels and kubectl port forwarding."
authors = ["Rauno Viskus <Rauno56@gmail.com>"]
keywords = ["watch", "cli", "tunnel", "process", "system", "ssh", "forward", "daemon"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Rauno56/watchman"
include = ["src/**/*", "Cargo.toml"]

[dependencies]
dialoguer = { git = "https://github.com/Rauno56/dialoguer", branch = "refactor/norm-item-addition" }
serde = { version = "1.0.98", features = ["derive"] }
sysinfo = "0.9.1"
serde_json = "1.0.40"
structopt = "0.2.18"
colored = "1.8.0"
directories = "2.0.2"
chrono = "0.4.13"

[profile.release]
lto = true
opt-level = "z"
